--- a/BurgerKing/css/style.css
+++ b/BurgerKing/css/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family:cursive;
+    font-family: 'Caveat', cursive;
     color: whitesmoke;
 }
 html{
@@ -31,7 +31,6 @@ nav li a:hover{
 }
 a{
     text-decoration: none;
-    font-family: calibri;
     font-weight: bold;
 }
 .order{
@@ -56,6 +55,10 @@ body{
     padding-left: 5%;
     position: relative;
     font-size: x-large;
+}
+.bannerText-container h2{
+    color: white;
+    text-align: left;
 }
 .offers{
     margin-top: 10%;
@@ -108,7 +111,7 @@ h2{
     text-align: center;
     font-size: xx-large;
     font-weight: bold;
-    font-family: cursive;
+    font-family: 'Parisienne', cursive;
     color: black;
 }
 .menu{
@@ -266,7 +269,7 @@ footer li i{
         width: 100%;
         position: absolute;
         left: 0;
-        top: 45px;
+        top: 40px;
         display: block;
         background-color: #000000;
     }
