--- a/BurgerKing/css/style.css
+++ b/BurgerKing/css/style.css
@@ -78,8 +78,8 @@ body{
 .off-img{
     display: block;
     overflow: hidden;
-    width: 40%;
-    height: 40%;
+    min-width: 110px;
+    max-width: 200px;
     border-radius: 50%;
     border: orange solid 5px;
 }
@@ -105,7 +105,9 @@ h3{
 }
 .off-text button{
     font-size: medium;
-    width: 150px;
+    max-width: 150px;
+    min-width: 70px;
+    text-align: center;
 }
 h2{
     text-align: center;
